Edit color scheme

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
-MONGODB_URL = "mongodb://localhost:27017/todos"
+# MONGODB_URL = "mongodb://localhost:27017/todos"
+# zSCOolHFN9y6w9jo
+
+MONGODB_URL = "mongodb+srv://dhruvvermadev:zSCOolHFN9y6w9jo@todo.hhjud5t.mongodb.net/?retryWrites=true&w=majority&appName=todo"
